# detect-windows-subsystem-for-linux

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  is_wsl.py  lib.cpp  main.c  main.f90
.github/workflows/: cmake.yml
c/: lib.c  main.c
cpp/: lib.cpp  main.cpp
fortran/: main.f90
include/: is_wsl.h
